# birthday_service

./: Dockerfile  README.md  celerybeat-schedule  docker-compose.yml  entrypoint.sh  pyproject.toml
config/: celery.py  routers.py  settings.py  urls.py
core/: models.py  tasks.py
core/admin/: __init__.py  subscription_admin.py  user_admin.py
core/migrations/: 0001_initial.py  0002_alter_user_options.py
core/serializers/: __init__.py  subscription_serializers.py  user_serializers.py
core/tests/: test_api.py  test_tasks.py
core/viewsets/: __init__.py  subscription_viewsets.py  user_viewsets.py
